feature: добавляет смену фона и иконок

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <title>Weather sounds</title>
   </head>
   <body>
-    <main class="background">
-      <div class="background_blur"></div>
+    <main>
+      <div class="background"></div>
       <div class="content">
         <h1>Weather sounds</h1>
         <div class="buttons">
